syntax = "proto3";

package users;

enum UserStatus {
    UNKNOWN = 0;
    OFFLINE = 1;
    BUSY = 2;
    AVAILABLE = 3;
}

message User {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    UserStatus status = 4;
}

message UserRequest {
    int32 id = 1;
}

service Users {
    rpc GetUser(UserRequest) returns (User) {};
}

message RandomStationNamesRequest{
    int32 count = 1;
    string region = 2;
}

message StationNames {
    repeated string name = 1;
}

service RandomStationNames{
    rpc GetRandomStationNames(RandomStationNamesRequest) returns (StationNames);
}